  GUIUtilities.getColorHexString(Color c)
  GUIUtilities.NEW_BUFFER_ICON
  GUIUtilities.DIRTY_BUFFER_ICON
  GUIUtilities.READ_ONLY_BUFFER_ICON
  GUIUtilities.NORMAL_BUFFER_ICON
  GUIUtilities.WINDOW_ICON
  BeanShell.runScript(View view,
                      String path,
                      Reader in,
                      boolean ownNamespace,
                      boolean rethrowBshErrors)
  BeanShell.eval(View view,
                 NameSpace namespace,
                 String command,
                 boolean rethrowBshErrors)
  EditAction.getView(Component comp)
  EditBus.getComponents()
  JarClassLoader.getZipFile()
  MiscUtilities.charsToEscapes(String str)
  MiscUtilities.charsToEscapes(String str, String toEscape)
  MiscUtilities.compareStrings(String str1, String str2, boolean ignoreCase)
  MiscUtilities.StringCompare
  MiscUtilities.StringICaseCompare
  MiscUtilities.getLeadingWhiteSpace(String str)
  MiscUtilities.getTrailingWhiteSpace(String str)
  MiscUtilities.getVirtualWidth(Segment seg, int tabSize)
  MiscUtilities.getOffsetOfVirtualColumn(Segment seg,
                                         int tabSize,
                                         int column,
                                         int[] totalVirtualWidth)
  MiscUtilities.createWhiteSpace(int len, int tabSize, int start)
  MiscUtilities.globToRE(String glob)
  MiscUtilities.quicksort(Vector vector, Compare compare)
  MiscUtilities.quicksort(Vector vector, Comparator compare)
  MiscUtilities.quicksort(Object[] obj, Compare compare)
  MiscUtilities.Compare
  MiscUtilities.MenuItemCompare
  MiscUtilities.getEncodings()
  MiscUtilities.parseXML(InputStream in, DefaultHandler handler)
  MiscUtilities.findEntity(String systemId, String test, Class where)
  MiscUtilities.charsToEntities(String str)
  MiscUtilities.stringsEqual(String s1, String s2)
  MiscUtilities.objectsEqual(Object o1, Object o2)
  MiscUtilities.KB_FORMAT
  MiscUtilities.MB_FORMAT